# onechain-wallet-rust-sdk

./: Cargo.toml  README.md
docs/: onechain_wallet_rust_sdk.json  onechain_wallet_rust_sdk.mdx
src/: lib.rs
src/client/: mod.rs
src/rpc/: did_api.rs  mod.rs  transfer_api.rs  wallet_api.rs
src/types/: common.rs  did.rs  mod.rs  transfer.rs  wallet.rs
src/utils/: mod.rs  rsa_sign.rs  zk_login.rs
tests/: tests.rs
